<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.ray.myapplicationportfolio.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                style="@style/WidthMatchHeightWrapStyle"
                android:text="@string/launcher_nano_apps" />

            <Button android:id="@+id/launcher_popularMovies"
                style="@style/WidthMatchHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_popular_movies"/>

            <Button android:id="@+id/launcher_stockHawk"
                style="@style/WidthMatchHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_stock_hawk"/>

            <Button android:id="@+id/launcher_buildItBigger"
                style="@style/WidthMatchHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_build_bigger"/>

            <Button android:id="@+id/launcher_makeYourApp"
                style="@style/WidthWrapHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_make_app"/>

            <Button android:id="@+id/launcher_goUbiquitous"
                style="@style/WidthMatchHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_go_ubiquitous"/>

            <Button android:id="@+id/launcher_capstone"
                style="@style/WidthMatchHeightWrapStyle"
                android:onClick="onAppLauncherButtonClicked"
                android:text="@string/launcher_capstone"/>

    </LinearLayout>

</ScrollView>